p2 dung base du an

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document xuan</title>
+    <!-- link reset -->
+    <link rel="stylesheet" href="./accset/css/reset.css">
+    <!-- link style -->
+     <link rel="stylesheet" href="./accset/css/style.css">
 </head>
 <body>
     <h1>xin chao moi nguoi</h1>
+    <h2>cảm ơn đã đén với trang web</h2>
 </body>
 </html>
