p3 làm phần header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,41 @@
     <!-- link style -->
      <link rel="stylesheet" href="./accset/css/style.css">
 </head>
-<body>
-    <h1>xin chao moi nguoi</h1>
-    <h2>cảm ơn đã đén với trang web</h2>
+<body style="height: 10000px; ">
+    <!-- HEADER -->
+    <header class="header fixed">  
+        <!-- ta đặt them class fixed dể tý dùng sticky neu menu lại
+          -->
+        <div class="main-content">
+            <!-- tạo main để tái sử dụng lại độ rọng các ptu qua cac phan -->
+            <div class="body-header">
+                <!-- tạo body de lat dung flex -->
+                 <!-- phan 1 logo -->
+                  <img src="./accset/img/Logo.svg" alt="lesson" class="logo">
+                  <!-- nav : trình duyetj hiểu đó là thanh menu or điều hướng của web-->
+                   <nav class="nav">
+                    <ul>
+                        <li class="active">
+                            <a href="#!">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!">Courses</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">Reviews</a>
+                        </li>
+                    </ul>
+                   </nav>
+                   <!-- btn action  nút hành đọng -->
+                    <div class="action">
+                        <a href="#!" class="btn btn-sign-up">Sign Up</a>
+                    </div>
+                                                      <!-- tạo thêm cl btn-sign vì ở đây có nút ấy khác nên cần thêm tên để tý thay đổi nwungx cái khcas nhau của btn -->
+                </div>
+        </div>
+    </header>
 </body>
 </html>
