p7Tối ưu hoá tiêu đề và miêu tả trên trang(line-clamp, word-break: break-all)

--- a/index.html
+++ b/index.html
@@ -156,14 +156,17 @@
                      <div class="info">
                         <!--  -->
                         <div class="head">
-                            <h3 class="title">Basic web design</h3>
+                            <h3 
+                             class="title line-clamp break-all">Basic web design Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus magni voluptatibus tempora quae fugit deserunt consequuntur suscipit quaerat mollitia porro.
+                            </h3>
                             <div class="rating">
                                 <img src="./accset/icon/Star 6.svg" alt="" class="star">
                                 <span class="value">4.5</span>
                             </div>
                         </div>
                         <!-- noi dung -->
-                         <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                        <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam harum nemo voluptatum reiciendis aperiam explicabo recusandae rem pariatur facere?.</div>
                          <!-- gias -->
                           <div class="foot">
                           <span class="price">$120.75</span>
@@ -184,14 +187,17 @@
             <div class="info">
                <!--  -->
                <div class="head">
-                   <h3 class="title">Basic web design</h3>
+                <h3 
+                class="title line-clamp break-all">Basic web design Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus magni voluptatibus tempora quae fugit deserunt consequuntur suscipit quaerat mollitia porro.
+               </h3>
                    <div class="rating">
                        <img src="./accset/icon/Star 6.svg" alt="" class="star">
                        <span class="value">4.5</span>
                    </div>
                </div>
                <!-- noi dung -->
-                <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+               <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam harum nemo voluptatum reiciendis aperiam explicabo recusandae rem pariatur facere?.</div>
                 <!-- gias -->
                  <div class="foot">
                  <span class="price">$120.75</span>
@@ -212,14 +218,17 @@
             <div class="info">
                <!--  -->
                <div class="head">
-                   <h3 class="title">Basic web design</h3>
+                <h3 
+                class="title line-clamp break-all">Basic web design Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus magni voluptatibus tempora quae fugit deserunt consequuntur suscipit quaerat mollitia porro.
+               </h3>
                    <div class="rating">
                        <img src="./accset/icon/Star 6.svg" alt="" class="star">
                        <span class="value">4.5</span>
                    </div>
                </div>
                <!-- noi dung -->
-                <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam harum nemo voluptatum reiciendis aperiam explicabo recusandae rem pariatur facere?.</div>
                 <!-- gias -->
                  <div class="foot">
                  <span class="price">$120.75</span>
@@ -232,9 +241,18 @@
             </div>
                 </div>
            
-                </div>
-                 </div>
-        </div>
+            </div>
+         </div>
+        <!-- </div>   -->
+        <!-- ddaay -->
+         <!-- testimol -->
+          <div class="testmol">
+            <div class="main-content">
+               
+            </div>
+          </div>
+          <!--  -->
+
      </main>
 </body>
 </html>
