--- a/index.html
+++ b/index.html
@@ -245,10 +245,39 @@
          </div>
         <!-- </div>   -->
         <!-- ddaay -->
-         <!-- testimol -->
-          <div class="testmol">
+         <!-- feedback -->
+          <div class="feedback">
             <div class="main-content">
-               
+                <div class="feedback-list">
+                    <!-- 1 item -->
+                     <div class="feedback-item">
+                        <!-- khoois trais -->
+                         <div class="info-fb">
+                            <img src="./accset/img/dbboy.svg" alt="" class="avatar">
+
+                            <div class="desc name-fb">Peter Moor</div>
+                            <div class="desc-fb">Student of Web Design</div>
+                            <div class="dots">
+                              <img src="./accset/icon/tronden.svg" alt="" class="dot">
+                              <img src="./accset/icon/tronvang.svg" alt="" class="dot active">
+                              <img src="./accset/icon/tronden.svg" alt="" class="dot">
+                            </div>
+                            <!-- nháp -->
+                             <div class="dots2">
+                                <span class="dot2"></span>
+                                <span class="dot2 active"></span>
+                                <span class="dot2"></span>
+                             </div>
+                         </div>
+                         <!-- khoi ben phai -->
+                          <div class="conten-fb">
+                            <img src="./accset/img/nhay.svg" alt="" class="open-quotes">
+                            <div class="block-quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </div>
+                          </div>
+                     </div>
+                     <!-- item2 -->
+
+                </div>
             </div>
           </div>
           <!--  -->
