hoan_thanh responsive_mobile

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
           const navmobile=document.querySelector("#nav--drawer");
           navmobile.innerHTML= navpc.innerHTML;
         </script>
+        <!-- phần mobile login -->
+         <div class="gach-ngang"></div>
+         <a href="#!" class="sing-up">Sign Up</a>
+      </div>
       </div>
     </div>
     <!-- phan main -->
